--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mantine/carousel": "^7.1.2",
     "@mantine/core": "^7.1.2",
+    "@mantine/form": "^7.2.2",
     "@mantine/hooks": "^7.1.2",
     "@tabler/icons-react": "^2.33.0",
     "@tauri-apps/api": "^2.0.0-alpha.11",
